test/negative/error4_interval.drift
monitor BadLogic {
    source: s
    baseline: b
    drift_check every -10_minutes { // Logikailag hibás
        method: psi
        threshold: 0.1
        alert: slack
    }
}